[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Malympian, malympian@duck.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
cryptography = "^41.0.4"
argon2 = "^0.1.10"
pycryptodomex = "^3.19.0"
passlib = "^1.7.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
